--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -6,5 +6,11 @@
   align-items: center;
   gap: 80px;
   flex-wrap: wrap;
-  min-height: calc(100vh - 65px);
+  min-height: calc(100vh - 102px);
+}
+
+@media screen and (max-width: 544px) {
+  .cards-list {
+    gap: 40px;
+  }
 }
