--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,15 @@
 html,
 body,
 .container {
-  font-family: Trebuchet, sans-serif;
+  font-family: 'Trebuchet MS', 'Arial', sans-serif;
   font-weight: 400;
   height: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
   background-color: black;
 }
 
