--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,9 @@
 .main-page {
-position: relative;
-
+  position: relative;
   width: 100%;
   min-height: 100%;
-  /*background-image: url('../../images/Pattern-min.png');*/
-  background: linear-gradient(black, transparent, black), url('../../images/Pattern-min.png') center;
+  background: linear-gradient(black, transparent, black),
+  url('../../images/Pattern-min.png') center;
 }
 
 .main-page__title {
