--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,5 +1,6 @@
 .cards-list {
-  padding: 0 25px;
+  padding: 0 15px 67px 15px;
+  box-sizing: border-box;
   margin: 0 auto;
   display: flex;
   justify-content: center;
